# einspace

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/language/: rs_language_eff.yaml
einspace/: activations.py  data.py  layers.py  main.py  network.py  search_spaces.py  search_spaces_1d.py  search_spaces_memory.py  search_strategies.py  trainers.py
einspace/data_utils/: cosmic.py  darcyflow.py  deepsea.py  ecg.py  fsd50k.py  psicov.py  satellite.py
