[project]
name = "einspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "fire>=0.7.1",
    "gdown>=5.2.1",
    "h5py>=3.15.1",
    "huggingface-hub>=1.3.7",
    "hydra-zen>=0.16.0",
    "librosa>=0.11.0",
    "memray>=1.19.1",
    "networkx>=3.6.1",
    "opencv-python>=4.13.0.90",
    "positional-encodings[pytorch]>=6.0.4",
    "pyvis>=0.3.2",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchmetrics>=1.8.2",
    "torchtyping>=0.1.5",
    "torchvision>=0.25.0",
    "tqdm>=4.67.2",
    "transformers>=5.0.0",
    "wandb>=0.24.1",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=26.1.0",
    "isort>=7.0.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-rich>=0.2.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "zero-cost-nas",
]
